--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "jquery": "^3.3.1",
     "splynx-nodejs-api": "^1.0.4",
     "vue": "^2.5.3",
+    "vue-resource": "^1.3.6",
     "vuetify": "^0.17.4"
   },
   "devDependencies": {
